[package]
name = "elderberry"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "*", features = ["binstart", "native"] }
esp-idf-svc = "*"
log = "*"

[build-dependencies]
embuild = "*"

[profile.release]
debug = true
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
